# teleportal

./: .gitignore  CMakeLists.txt  README.md
include/: game.hpp  resourceLoader.hpp
include/ECS/: ECS.hpp  SpriteComponent.hpp  TransformComponent.hpp
src/: ECS.cpp  SpriteComponent.cpp  TransformComponent.cpp  game.cpp  main.cpp  resourceLoader.cpp
